@@ -1,3 +1,7 @@
+2011-02-19 Erwin Waterlander <waterlan@xs4all.nl>
+	* Makefile: Generation of PostScript and PDF is optional.
+	  This removes dependency on GhostScript (thanks to Philipp Thomas).
+
 2011-02-04 Erwin Waterlander <waterlan@xs4all.nl>
 	* Makefile: Replace GPL (accidently patched in) with FreeBSD license.
 	* man/man1/Makefile: Fix perl command for for DOS alike file systems
